Commit 2 : JS file changes

--- a/DigitallyPowerful/Views/Home/Index.cshtml
+++ b/DigitallyPowerful/Views/Home/Index.cshtml
@@ -6,7 +6,6 @@
     
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center">
-
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
@@ -29,7 +28,8 @@
             </div>
         </div>
 
-    </section><!-- End Hero -->
+    </section>
+    <!-- End Hero -->
 
     <main id="main">
 
@@ -132,92 +132,91 @@
                 </div>
 
                 <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-                    <li data-filter="*" class="filter-active">Influencers</li>
-                    <li data-filter=".filter-app">YouTubers</li>
-                    <li data-filter=".filter-card">Trending</li>
-                    <li data-filter=".filter-web">Pages</li>
+                    <li data-filter=".filter-Influencers" class="filter-active">Influencers</li>
+                    <li data-filter=".filter-YouTubers">YouTubers</li>
+                    <li data-filter=".filter-Meme">Meme Pages</li>
                 </ul>
 
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
                         <div class="portfolio-img"><img src="~/images/Influencers/Deepika.JPG" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Deepika</h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
                         <div class="portfolio-img"><img src="~/images/Influencers/PremShyaam.JPG" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Prem Shyaam</h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
                         <div class="portfolio-img"><img src="~/images/Influencers/KristenRavali.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Kristen Ravali</h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
                         <div class="portfolio-img"><img src="~/images/Influencers/Wilspat.JPG" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Wilspat</h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
                         <div class="portfolio-img"><img src="~/images/Influencers/HazelShiny.JPG" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Hazel Shiny</h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
                         <div class="portfolio-img"><img src="~/images/Influencers/Sakthi.JPG" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Sakthi</h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
                         <div class="portfolio-img"><img src="~/images/Influencers/Nivisha.JPG" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Nivisha</h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
                         <div class="portfolio-img"><img src="~/images/Influencers/SamVishal.JPG" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Sam Vishal</h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
                         <div class="portfolio-img"><img src="~/images/Influencers/Raveena.JPG" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Raveena</h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
                         <div class="portfolio-img"><img src="~/images/Influencers/VishnuUnnikrishnan.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Vishnu Unnikrishnan</h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
                         <div class="portfolio-img"><img src="~/images/Influencers/Pranika.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Pranika</h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
                         <div class="portfolio-img"><img src="~/images/Influencers/Ananya.JPG" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Ananya</h4>
@@ -273,48 +272,15 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-lg-6 mt-4">
-                        <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-                            <div class="pic"><img src="~/images/team/team-3.jpg" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <h4>William Anderson</h4>
-                                <span>CTO</span>
-                                <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
-                                <div class="social">
-                                    <a href=""><i class="ri-twitter-fill"></i></a>
-                                    <a href=""><i class="ri-facebook-fill"></i></a>
-                                    <a href=""><i class="ri-instagram-fill"></i></a>
-                                    <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 mt-4">
-                        <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-                            <div class="pic"><img src="~/images/team/team-4.jpg" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <h4>Amanda Jepson</h4>
-                                <span>Accountant</span>
-                                <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
-                                <div class="social">
-                                    <a href=""><i class="ri-twitter-fill"></i></a>
-                                    <a href=""><i class="ri-facebook-fill"></i></a>
-                                    <a href=""><i class="ri-instagram-fill"></i></a>
-                                    <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+                   
                 </div>
 
             </div>
         </section>
         <!-- End Team Section -->
        
-    </main><!-- End #main -->
+    </main>
+    <!-- End #main -->
   
 </body>
 
