--- a/DigitallyPowerful/Views/User/Login.cshtml
+++ b/DigitallyPowerful/Views/User/Login.cshtml
@@ -38,7 +38,7 @@
                     <a asp-controller="User" asp-action="Brand" class="link float-right">Forgot Password ?</a>
                 </div>
                 <div class="form-action mb-3">
-                    <a asp-controller="User" asp-action="Influencer" class="btn btn-primary btn-rounded btn-login">Sign In</a>
+                    <a asp-controller="User" asp-action="Influencer" class="btn btn-primary btn-rounded btn-login" id="signin">Sign In</a>
                 </div>
                 <div class="login-account">
                     <span class="msg">Don't have an account yet ?</span>
