--- a/DigitallyPowerful/Views/Home/Contact.cshtml
+++ b/DigitallyPowerful/Views/Home/Contact.cshtml
@@ -80,14 +80,14 @@
                             </div>
                             <div class="form-group">
                                 <label for="Contact_message">Message</label>
-                                <textarea class="form-control" name="Contact_message" rows="8" required></textarea>
+                                <textarea class="form-control" name="Contact_message" id="Contact_message" rows="8" required></textarea>
                             </div>
                             <div class="my-3">
                                 <div class="loading">Loading</div>
                                 <div class="error-message"></div>
                                 <div class="sent-message">Your message has been sent. Thank you!</div>
                             </div>
-                            <div class="text-center"><button type="submit">Send Message</button></div>
+                            <div class="text-center"><button type="submit" id="Contact_usbtn">Send Message</button></div>
                         </form>
                     </div>
 
