--- a/DigitallyPowerful/Views/Shared/_Layout.cshtml
+++ b/DigitallyPowerful/Views/Shared/_Layout.cshtml
@@ -32,10 +32,9 @@
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center">
 
-            <h1 class="logo me-auto"><a asp-controller="Home" asp-action="Index">Digitally Powerful</a></h1>
+            @*<h1 class="logo me-auto"><a asp-controller="Home" asp-action="Index">Digitally Powerful</a></h1>*@
             <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
+             <a href="index.html" class="logo me-auto"><img src="~/images/DigitallyPowerful.jpg" alt="" class="img-fluid"></a>
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" asp-controller="Home" asp-action="Index">Home</a></li>
