Commit 2: js changes

--- a/DigitallyPowerful/Views/Shared/_Layout.cshtml
+++ b/DigitallyPowerful/Views/Shared/_Layout.cshtml
@@ -32,10 +32,9 @@
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center">
 
-            <h1 class="logo me-auto"><a asp-controller="Home" asp-action="Index">Digitally Powerful</a></h1>
+            @*<h1 class="logo me-auto"><a asp-controller="Home" asp-action="Index">Digitally Powerful</a></h1>*@
             <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
+            <a href="index.html" class="logo me-auto"><img src="~/images/DigitallyPowerful.jpg" alt="" class="img-fluid"></a>
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" asp-controller="Home" asp-action="Index">Home</a></li>
@@ -92,7 +91,7 @@
                             <div class="social-links mt-3">
                                 <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
                                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>                              
+                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                                 <a href="https://api.whatsapp.com/send?phone=+919342038434" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
                             </div>
                         </div>
