--- a/DigitallyPowerful/Views/User/Login.cshtml
+++ b/DigitallyPowerful/Views/User/Login.cshtml
@@ -11,7 +11,7 @@
         <div class="container d-flex align-items-center">
             <h1 class="logo me-auto"><a asp-controller="Home" asp-action="Index">Digitally Powerful</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->           
+            <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
         </div>
     </header><!-- End Header -->
     <div class="wrapper wrapper-login">
@@ -38,7 +38,7 @@
                     <a asp-controller="User" asp-action="Brand" class="link float-right">Forgot Password ?</a>
                 </div>
                 <div class="form-action mb-3">
-                    <a asp-controller="User" asp-action="Influencer" class="btn btn-primary btn-rounded btn-login">Sign In</a>
+                    <a asp-controller="User" asp-action="Influencer" class="btn btn-primary btn-rounded btn-login" id="signin">Sign In</a>
                 </div>
                 <div class="login-account">
                     <span class="msg">Don't have an account yet ?</span>
